--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "tailwindcss": "3.2.7"
   },
   "devDependencies": {
-    "@vitejs/plugin-basic-ssl": "^1.0.1"
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-plugin-astro": "^0.26.1",
+    "eslint-plugin-import": "^2.25.2"
   }
 }
