--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.0.1",
-    "@storyblok/astro": "2.0.9",
+    "@storyblok/astro": "^2.5.4",
     "astro": "^2.0.16",
     "tailwindcss": "3.2.7"
   },
