--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.0.1",
     "@storyblok/astro": "^2.5.4",
-    "astro": "^2.0.16",
-    "tailwindcss": "3.2.7"
+    "astro": "^2.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-basic-ssl": "^1.0.1",
